--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ h2 {
     background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(250,217,42,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#fad92a',GradientType=0 );
     padding-top: 100px;
-    min-height: 85%;
+    height: 85%;
+    min-height: 600px;
     margin-bottom: 3%;
 }
 #inicio h2 {
@@ -72,6 +73,10 @@ h2 {
 	border-top: 10px solid #ffc718;
 	padding: 8px 15px;
 	width: 100%;
+	min-height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 #lista-paises {padding-bottom: 30px;}
