--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,15 @@ h3 {
 	#ocho img.position-absolute {
 		right: 0px;
 	}
+	.xs-pt-0 {
+		padding-top: 0!important;
+	}
+	.xs-pt-25 {
+		padding-top: 25px!important;
+	}
+	.form-check-input {
+		margin-left: 0!important;
+	}
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
