--- a/pe/css/styles.css
+++ b/pe/css/styles.css
@@ -18,6 +18,7 @@ body {
 	margin:0; 
 	background:#fad92a url(../img/bg_body.jpg) no-repeat fixed top; 
 	background-size:cover;
+	overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6, p, ul {
 	padding: 0;
@@ -51,6 +52,12 @@ h3 {
 	font-size: 49px;
 }
 
+.font-10 {
+	font-size: 10px;
+}
+.font-15 {
+	font-size: 15px;
+}
 .font-19 {
 	font-size: 19px;
 }
@@ -65,6 +72,9 @@ h3 {
 }
 .red {
 	color: #ec0928!important;
+}
+.black {
+	color: #000!important;
 }
 .text-underline {
 	text-decoration: underline!important;
@@ -288,6 +298,12 @@ h3 {
 	right:15px;
 	top: 15px;
 	display: inline-block;
+}
+
+.top-30 {
+	position: relative;
+	top: -30px;
+	right: -140px;
 }
 
 
